# planet-right-choice

./: .gitignore  Cargo.toml  LICENSE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml
api/: Cargo.toml  seed_products.sql  wrangler.toml
api/src/: lib.rs
api/src/db/: mod.rs  models.rs
api/src/middleware/: auth.rs
api/src/migrations/: 0001_initial.sql  0002_affiliate.sql  0003_admin.sql  0004_seed_categories.sql  0005_impact.sql  0006_indexes.sql
api/src/routes/: affiliate.rs  alternatives.rs  catalogue.rs  footprint.rs  health.rs  impact.rs  mod.rs
api/src/routes/admin/: affiliate.rs  auth.rs  catalogue.rs  detections.rs  estimations.rs  fetch_images.rs  mod.rs
api/src/services/: estimation.rs  mod.rs  paapi.rs  scoring.rs
extension/: manifest.firefox.json  manifest.json  package.json  tsconfig.json  vite.config.ts
extension/src/background/: affiliate.ts  api-client.ts  rules-sync.ts  service-worker.ts
extension/src/content/: banner.ts  index.ts  scanner.ts
extension/src/popup/: index.html  popup.ts
extension/src/shared/: messaging.ts  storage.ts
site/: astro.config.mjs  package.json  tailwind.config.mjs  wrangler.toml
site/src/layouts/: Admin.astro  Base.astro  Marketing.astro
site/src/lib/: api.ts  config.ts
site/src/middleware/: index.ts
site/src/pages/: catalogue.astro  how-it-works.astro  index.astro  install.astro  product.astro
site/src/pages/admin/: affiliate.astro  catalogue.astro  detections.astro  footprints.astro  impact.astro  index.astro  login.astro
(+7 files in other folders)
